--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ export OPENAI_API_KEY="";
 export DEEPL_AUTH_KEY="";
 
 # https://github.com/kardolus/chatgpt-cli
-export CHAGPT_CLI="/usr/local/bin/chatgpt";
+export CHATGPT_CLI="/usr/local/bin/chatgpt";
 
 # https://github.com/kojix2/deepl-cli
 export DEEPL_CLI="/usr/local/bin/deepl";
